# forcingprocessor

./: README.md  pyproject.toml  requirements.txt  setup.cfg  test.py  versions.yml
.github/executions/: fp_push_execution_arm.json
.github/workflows/: build_push_fp.yaml  ci.yaml
configs/: conf_fp.json
data/forcing/forcings/: cat-1555522.csv
data/forcing/metadata/forcings_metadata/: catchments_avg.csv  catchments_median.csv  conf.json  metadata.csv  weights.parquet
docker/: docker_loginNpush.sh
