[project]
name = "forcingprocessor"
version = "0.1.0"
description = "Tool to convert nwm forcing netcdfs to ngen compatible files"
readme ="README.md"
authors = [
    { name = "Jordan J. Laser", email = " jlaser@lynker.com" }
]
requires-python = ">=3.11"
dependencies = [
    "affine==2.4.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "attrs==25.4.0",
    "boto3==1.42.49",
    "botocore==1.42.49",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "cftime==1.6.5",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "click-plugins==1.1.1.2",
    "cligj==0.7.2",
    "cloudpickle==3.1.2",
    "contourpy==1.3.3",
    "cryptography==46.0.5",
    "cycler==0.12.1",
    "dask==2026.1.2",
    "decorator==5.2.1",
    "exactextract==0.3.0",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "gcsfs==2026.2.0",
    "geopandas==1.1.2",
    "google-api-core==2.29.0",
    "google-auth==2.48.0",
    "google-auth-oauthlib==1.2.4",
    "google-cloud-core==2.5.0",
    "google-cloud-storage==3.9.0",
    "google-cloud-storage-control==1.10.0",
    "google-crc32c==1.8.0",
    "google-resumable-media==2.8.0",
    "googleapis-common-protos==1.72.0",
    "grpc-google-iam-v1==0.14.3",
    "grpcio==1.78.0",
    "grpcio-status==1.78.0",
    "h5netcdf==1.8.1",
    "h5py==3.15.1",
    "idna==3.11",
    "imageio==2.37.2",
    "importlib-metadata==8.7.1",
    "jmespath==1.1.0",
    "kiwisolver==1.4.9",
    "locket==1.0.0",
    "matplotlib==3.10.8",
    "multidict==6.7.1",
    "netcdf4==1.7.4",
    "numpy==2.4.2",
    "nwmurl==1.0.1",
    "oauthlib==3.3.1",
    "packaging==26.0",
    "pandas==3.0.0",
    "partd==1.4.2",
    "pillow==12.1.1",
    "propcache==0.4.1",
    "proto-plus==1.27.1",
    "protobuf==6.33.5",
    "psutil==7.2.2",
    "pyarrow==23.0.0",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pyogrio==0.12.1",
    "pyparsing==3.3.2",
    "pyproj==3.7.2",
    "pysam==0.23.3",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "rasterio==1.4.4",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rioxarray==0.19.0",
    "rsa==4.9.1",
    "rust==1.3.1",
    "s3fs==0.4.2",
    "s3transfer==0.16.0",
    "scipy==1.17.0",
    "shapely==2.1.2",
    "six==1.17.0",
    "toolz==1.1.0",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "xarray==2026.1.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
]

[project.scripts]
forcingprocessor = "forcingprocessor:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
